syntax = "proto3";

message PeerIdProto {
  required bytes id = 1;
  optional bytes pubKey = 2;
  optional bytes privKey = 3;
}
